--- a/client/default.css
+++ b/client/default.css
@@ -8,7 +8,18 @@ html, body {
 }
 
 canvas {
-    /*border: 1px solid;*/
+    position: absolute;
+    pointer-events: none;
+}
+
+canvas#cv {
+    pointer-events: all;
+    z-index: 1;
+}
+
+canvas#cv-2 {
+    z-index: 2;
+    opacity: 0.5;
 }
 
 .tools-menu {
@@ -24,6 +35,7 @@ canvas {
     user-select: none;
     overflow: hidden;
     padding-right: 65px;
+    z-index: 3;
 }
 
 .tools-menu input[type="color"] {
